[package]
name = "luanti-protocol-derive"
description = "Derive macros for luanti-protocol"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true

log.workspace = true
syn = { workspace = true, features = ["full", "fold"] }
quote.workspace = true

[lints]
workspace = true
