[package]
name = "luanti-protocol"
description = "Luanti protocol implemented in Rust"
keywords = ["luanti", "minetest", "protocol", "debug"]
edition.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
thiserror.workspace = true
rand.workspace = true
luanti-protocol-derive.workspace = true
miniz_oxide.workspace = true
zstd-safe = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }

[lints]
workspace = true
