[package]
name = "luanti-protocol"
description = "Luanti protocol implemented in Rust"
keywords = ["luanti", "minetest", "protocol", "debug"]
edition.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
luanti-protocol-derive.workspace = true

anyhow = { workspace = true, features = ["backtrace"] }
log.workspace = true
miniz_oxide.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
# tokio-util = { workspace = true, features = ["full"] }
zstd-safe = { workspace = true, features = ["std"] }

[lints]
workspace = true
