[package]
name = "luanti-server"
description = "Minimal skeleton implementation of a server compatible with the Luanti protocol"
keywords = ["luanti", "minetest", "server"]
edition.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true

[[bin]]
name = "luanti-server"
path = "src/main.rs"
test = false
bench = false

[dependencies]
luanti-protocol.workspace = true

anyhow = { workspace = true, features = ["backtrace"] }
clap = { workspace = true, features = ["derive"] }
env_logger.workspace = true
log.workspace = true
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
