[package]
name = "luanti-shark"
description = "Luanti proxy with detailed inspection of protocol"
keywords = ["luanti", "minetest", "proxy", "shark"]
edition.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true

[[bin]]
name = "mtshark"
path = "src/main.rs"
test = false
bench = false

[dependencies]
luanti-protocol.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive"] }

[lints]
workspace = true
